[package]
name = "noodles-htsget"
version = "0.4.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An htsget client"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-htsget"

[dependencies]
base64 = "0.22.0"
bytes.workspace = true
futures = { workspace = true, features = ["std"] }
noodles-core = { path = "../noodles-core", version = "0.14.0" }
reqwest.workspace = true
serde.workspace = true
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_test = "1.0.137"
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }
