[package]
name = "noodles-refget"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.57.0"
description = "A refget client"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-refget"

[dependencies]
bytes = "1.0.1"
noodles-core = { path = "../noodles-core", version = "0.7.0" }
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.136", features = ["derive"] }
url = "2.2.2"

[dev-dependencies]
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread"] }
