[package]
name = "noodles-refget"
version = "0.1.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version = "1.64.0"
description = "A refget client"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-refget"
publish = false

[dependencies]
bytes.workspace = true
noodles-core = { path = "../noodles-core", version = "0.12.0" }
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.136", features = ["derive"] }
url = "2.2.2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
