[package]
name = "noodles-refget"
version = "0.7.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A refget client"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-refget"

[dependencies]
bytes.workspace = true
noodles-core = { path = "../noodles-core", version = "0.17.0" }
reqwest.workspace = true
serde.workspace = true
url.workspace = true

[dev-dependencies]
serde_test = "1.0.137"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
