[package]
name = "noodles-tabix"
version = "0.57.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Tabix (TBI) format reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-tabix"
categories = ["parser-implementations", "science::bioinformatics"]

[features]
async = ["dep:tokio", "noodles-bgzf/async"]

[dependencies]
bstr.workspace = true
indexmap.workspace = true
noodles-bgzf = { path = "../noodles-bgzf", version = "0.43.0" }
noodles-core = { path = "../noodles-core", version = "0.18.0" }
noodles-csi = { path = "../noodles-csi", version = "0.51.0" }

tokio = { workspace = true, optional = true, features = ["fs", "io-util"] }

[dev-dependencies]
bstr.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["async"]

[[example]]
name = "tabix_list_reference_sequence_names_async"
required-features = ["async"]

[[example]]
name = "tabix_query_generic_async"
required-features = ["async", "noodles-csi/async"]

[[example]]
name = "tabix_read_header_async"
required-features = ["async"]
