[package]
name = "noodles-util"
version = "0.65.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "noodles support utilities"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-util"
categories = ["science::bioinformatics"]

[features]
alignment = [
  "dep:noodles-bam",
  "dep:noodles-bgzf",
  "dep:noodles-core",
  "dep:noodles-cram",
  "dep:noodles-csi",
  "dep:noodles-fasta",
  "dep:noodles-sam",
]
async = [
  "dep:futures",
  "dep:tokio",
  "noodles-bam?/async",
  "noodles-bcf?/async",
  "noodles-bgzf?/async",
  "noodles-cram?/async",
  "noodles-sam?/async",
  "noodles-vcf?/async",
]
variant = [
  "dep:noodles-bcf",
  "dep:noodles-bgzf",
  "dep:noodles-core",
  "dep:noodles-csi",
  "dep:noodles-vcf",
]

[dependencies]
flate2 = { workspace = true }
noodles-bam = { path = "../noodles-bam", version = "0.78.0", optional = true }
noodles-bcf = { path = "../noodles-bcf", version = "0.73.0", optional = true }
noodles-bgzf = { path = "../noodles-bgzf", version = "0.38.0", optional = true }
noodles-core = { path = "../noodles-core", version = "0.17.0", optional = true }
noodles-cram = { path = "../noodles-cram", version = "0.81.0", optional = true }
noodles-csi = { path = "../noodles-csi", version = "0.46.0", optional = true }
noodles-fasta = { path = "../noodles-fasta", version = "0.51.0", optional = true }
noodles-sam = { path = "../noodles-sam", version = "0.74.0", optional = true }
noodles-vcf = { path = "../noodles-vcf", version = "0.76.0", optional = true }

futures = { workspace = true, optional = true, features = ["std"] }
tokio = { workspace = true, optional = true, features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "util_alignment_depth"
required-features = ["alignment"]

[[example]]
name = "util_alignment_query"
required-features = ["alignment"]

[[example]]
name = "util_alignment_rewrite"
required-features = ["alignment"]

[[example]]
name = "util_alignment_rewrite_async"
required-features = ["alignment", "async"]

[[example]]
name = "util_alignment_view"
required-features = ["alignment"]

[[example]]
name = "util_alignment_view_async"
required-features = ["alignment", "async"]

[[example]]
name = "util_variant_query"
required-features = ["variant"]

[[example]]
name = "util_variant_rewrite"
required-features = ["variant"]

[[example]]
name = "util_variant_rewrite_async"
required-features = ["async", "variant"]

[[example]]
name = "util_variant_view"
required-features = ["variant"]

[[example]]
name = "util_variant_view_async"
required-features = ["async", "variant"]
