[package]
name = "noodles-vcf"
version = "0.27.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version = "1.64.0"
description = "Variant Call Format (VCF) reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-vcf"

[features]
async = ["dep:futures", "dep:tokio", "noodles-bgzf/async", "noodles-tabix/async"]

[dependencies]
indexmap.workspace = true
memchr.workspace = true
nom = "7.0.0"
noodles-bgzf = { path = "../noodles-bgzf", version = "0.20.0" }
noodles-core = { path = "../noodles-core", version = "0.11.0" }
noodles-csi = { path = "../noodles-csi", version = "0.15.0" }
noodles-tabix = { path = "../noodles-tabix", version = "0.18.0" }
percent-encoding.workspace = true

futures = { workspace = true, optional = true, features = ["std"] }
tokio = { workspace = true, optional = true, features = ["io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "io-std", "macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["async"]

[[example]]
name = "vcf_count_async"
required-features = ["async"]

[[example]]
name = "vcf_query_async"
required-features = ["async"]

[[example]]
name = "vcf_read_header_async"
required-features = ["async"]

[[example]]
name = "vcf_reheader_async"
required-features = ["async"]

[[example]]
name = "vcf_view_async"
required-features = ["async"]

[[example]]
name = "vcf_write_async"
required-features = ["async"]
