[package]
name = "noodles-vcf"
version = "0.51.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Variant Call Format (VCF) reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-vcf"

[features]
async = ["dep:futures", "dep:tokio", "noodles-bgzf/async", "noodles-tabix/async"]

[dependencies]
indexmap.workspace = true
memchr.workspace = true
noodles-bgzf = { path = "../noodles-bgzf", version = "0.28.0" }
noodles-core = { path = "../noodles-core", version = "0.14.0" }
noodles-csi = { path = "../noodles-csi", version = "0.32.0" }
noodles-tabix = { path = "../noodles-tabix", version = "0.38.0" }
percent-encoding.workspace = true

futures = { workspace = true, optional = true, features = ["std"] }
tokio = { workspace = true, optional = true, features = ["io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "io-std", "macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["async"]

[[example]]
name = "vcf_count_async"
required-features = ["async"]

[[example]]
name = "vcf_query_async"
required-features = ["async"]

[[example]]
name = "vcf_read_header_async"
required-features = ["async"]

[[example]]
name = "vcf_reheader_async"
required-features = ["async"]

[[example]]
name = "vcf_view_async"
required-features = ["async"]

[[example]]
name = "vcf_write_async"
required-features = ["async"]
