[package]
name = "noodles"
version = "0.81.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Bioinformatics I/O libraries"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles"
readme = "../README.md"

[dependencies]
noodles-bam = { path = "../noodles-bam", version = "0.67.0", optional = true }
noodles-bcf = { path = "../noodles-bcf", version = "0.60.0", optional = true }
noodles-bed = { path = "../noodles-bed", version = "0.16.0", optional = true }
noodles-bgzf = { path = "../noodles-bgzf", version = "0.33.0", optional = true }
noodles-core = { path = "../noodles-core", version = "0.15.0", optional = true }
noodles-cram = { path = "../noodles-cram", version = "0.68.0", optional = true }
noodles-csi = { path = "../noodles-csi", version = "0.38.0", optional = true }
noodles-fasta = { path = "../noodles-fasta", version = "0.43.0", optional = true }
noodles-fastq = { path = "../noodles-fastq", version = "0.14.0", optional = true }
noodles-gff = { path = "../noodles-gff", version = "0.37.0", optional = true }
noodles-gtf = { path = "../noodles-gtf", version = "0.32.0", optional = true }
noodles-htsget = { path = "../noodles-htsget", version = "0.6.0", optional = true }
noodles-refget = { path = "../noodles-refget", version = "0.5.0", optional = true }
noodles-sam = { path = "../noodles-sam", version = "0.64.0", optional = true }
noodles-tabix = { path = "../noodles-tabix", version = "0.44.0", optional = true }
noodles-vcf = { path = "../noodles-vcf", version = "0.64.0", optional = true }

[features]
default = []

bam = ["dep:noodles-bam"]
bcf = ["dep:noodles-bcf"]
bed = ["dep:noodles-bed"]
bgzf = ["dep:noodles-bgzf"]
core = ["dep:noodles-core"]
cram = ["dep:noodles-cram"]
csi = ["dep:noodles-csi"]
fasta = ["dep:noodles-fasta"]
fastq = ["dep:noodles-fastq"]
gff = ["dep:noodles-gff"]
gtf = ["dep:noodles-gtf"]
htsget = ["dep:noodles-htsget"]
refget = ["dep:noodles-refget"]
sam = ["dep:noodles-sam"]
tabix = ["dep:noodles-tabix"]
vcf = ["dep:noodles-vcf"]

async = [
  "noodles-bam?/async",
  "noodles-bcf?/async",
  "noodles-bgzf?/async",
  "noodles-cram?/async",
  "noodles-csi?/async",
  "noodles-fasta?/async",
  "noodles-fastq?/async",
  "noodles-gff?/async",
  "noodles-sam?/async",
  "noodles-tabix?/async",
  "noodles-vcf?/async",
]

[package.metadata.docs.rs]
all-features = true
